added appendix + abstract

--- a/thesis/content/abstract.tex
+++ b/thesis/content/abstract.tex
@@ -1,7 +1,9 @@
-\chapter{Abstract and Exposeé}
+\chapter{Abstract}
 
- There are many many different approaches to achieve good software design, however often it is not clear whether the benefits of the best practices overweight the additional effort of implementing them. Little research is done on comparisons between the designs in terms of efficiency and programming effort. Many books do show sample code of their proposed designs, however they do not cover how the code would look like if implemented in a more straight-forward and monolithic way.
+While design patterns are proposed as a standard way to achieve good software design little research is done on the actual impact of using these strategies on code quality. Many books suggest that their methods increase flexibility and maintainability however they often do not provide any evidence. 
 
-This bachelor's thesis tries to cover this topic by implementing the same application two times: as a monolithic program and as a program that pays attention to the information provided about software design and architecture. In the first step, the program will use only one data source and one graphical interface (GUI). In the second step in each program another data source and GUI was added. 
+This bachelor thesis intends to empirically prove the hypothesis that the use of design patterns improves code quality. 
 
-The sourcecode will be available on Github \footnote{\href{https://github.com/Vallant/design-patterns-study.git}{https://github.com/Vallant/design-patterns-study.git}} under GPLv3 \footnote{\href{https://www.gnu.org/licenses/gpl-3.0.de.html}{https://www.gnu.org/licenses/gpl-3.0.de.html}}. The application will be written in Java using Swing as a front-end and PostgreSQL as database. In phase two JavaFX should be supported as a front-end, XML should be supported as a database. The user will be able to choose between all options using parameters when starting the application.
+To gather data about the code two applications are implemented which need to meet the same requirements. While one application is developed following widespread guidelines and principles proposed by the object oriented programming, the other is implemented without paying attention to the topics of software maintenance. After complying to the basic requirements new features are implemented in two additional phases. At first a new graphical user interface is being supported, then another data tier is added.
+
+The results show that the initial effort of implementing the program version following object oriented programming guidelines are significantly higher in terms of code lines and necessary files. However during the implementation of additional features less files needed to be modified and during one phase traversal significantly less code was needed to be written while not performing worse in the other. 
