--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -58,12 +58,9 @@
 
 \tableofcontents
 
-%\input{content/abstract.tex}
-%\input{content/timetable.tex}
-%\input{content/acknowledgements.tex}
-
 \mainmatter
 
+\input{content/abstract.tex}
 \input{content/introduction.tex}        
 \input{content/background.tex}
 \input{content/methods.tex}
@@ -72,13 +69,10 @@
 \input{content/conclusion.tex}
 %\input{content/future_work.tex}
 
-
-%\cite{Gof94}
-%\cite{Hfd04}
-%\cite{Aspect06}
-%\cite{Composing06}
-
 \cleardoublepage
+
+\appendix
+\input{content/appendix.tex}
 
 \let\LaTeXStandardClearpage\clearpage
 \let\clearpage\relax  % Do nothing when a \clearpage command appears 
