--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -74,6 +74,8 @@
 \appendix
 \input{content/appendix.tex}
 
+\clearpage
+
 \let\LaTeXStandardClearpage\clearpage
 \let\clearpage\relax  % Do nothing when a \clearpage command appears 
 \let\cleardoublepage\relax
