--- a/thesis/preamble.tex
+++ b/thesis/preamble.tex
@@ -131,7 +131,7 @@
 
 %% general metadata:
 \newcommand{\myauthor}{Stephan Valentan}  %% also used for PDF metadata (hyperref)
-\newcommand{\mytitle}{How the use of Design Patterns impacts Code Quality: A controlled Experiment}  %% also used for PDF metadata (hyperref)
+\newcommand{\mytitle}{How Design Patterns Impact Code Quality: A Controlled Experiment}  %% also used for PDF metadata (hyperref)
 \newcommand{\mysubject}{SUBJECT}  %% also used for PDF metadata (hyperref)
 \newcommand{\mykeywords}{KEYWORDS}  %% also used for PDF metadata (hyperref)
 
@@ -140,7 +140,7 @@
 \newcommand{\mygrade}{Bachelor of Science} %% title you are getting with this work like ``Master of ...''
 \newcommand{\mystudy}{Software Development and Management} %% your study like ``Arts''
 \newcommand{\myuniversity}{Graz University of Technology} %% your university/school
-\newcommand{\myinstitute}{Knowledge Technologies Institute} %% affiliation
+\newcommand{\myinstitute}{Institute of Interactive Systems and Data Science} %% affiliation
 \newcommand{\myinstitutehead}{Stefanie Univ.-Prof.\, Dr. Stefanie Lindstaedt } %% head of institute
 \newcommand{\mysupervisor}{Dipl.-Ing. Ass. Prof. Roman Kern} %% your supervisor
 \newcommand{\myevaluator}{} %% your evaluator
