--- a/thesis/content/conclusion.tex
+++ b/thesis/content/conclusion.tex
@@ -7,12 +7,12 @@ Throughout the development process five major issues could be discovered:
 \begin{itemize}
 	\item \textbf{Number of files}: The best practice version of the application needed a higher number of files than the ad-hoc implementation throughout all phases.
 	\item \textbf{Lines of code}: The best practice version needed more lines of code in all phases.
-	\item \textbf{Lines per file}: The best practice versions files contained significantly less lines of code per file.
-	\item \textbf{Increase in code lines}: Especially in traversal from phase 1 to phase 2 the best practice implementation needed significantly less code additions.
+	\item \textbf{Lines per file}: The best practice versions files contained notably less lines of code per file.
+	\item \textbf{Increase in code lines}: Especially in transition from phase 1 to phase 2 the best practice implementation needed considerably less code additions.
 	\item \textbf{Touched files}: The number of touched or edited files during phase traversal was lower in the best practice program version.
 \end{itemize}
 
-It has to be said that the results gathered in section \ref{sec:results} may vary depending on the coding style, programming language, concrete use case and size of the project, furthermore the term \emph{code quality} does not have a unique definition. There are many different standpoints on what attributes a well written code should have, often depending on company coding policies. One factor that is not mentioned by intention in this thesis is the readability of the code as this is a very subjective matter and cannot be proven. 
+It has to be said that the results gathered in section \ref{sec:results} may vary depending on the coding style, programming language, concrete use case and size of the project, furthermore the term \emph{code quality} does not have a unique definition. There are many different standpoints on what attributes a well written code should have, often depending on company coding policies. One factor that is not mentioned by intention in this thesis is the readability of the code as this is a very subjective matter and is therefore not considered. 
 
 In terms of the definition used in this thesis, which mainly focuses on properties defined by guidelines of the object oriented programming the results support the hypothesis saying that the use of design patterns improves code quality in later stages of a project cycle. This is backed up by the lower number of files needing modification in the process of extending functionality and the lower number of lines added between phases 1 and 2. 
 
