--- a/thesis/content/introduction.tex
+++ b/thesis/content/introduction.tex
@@ -7,13 +7,15 @@ Many books are available on this area of expertise, on how to write maintainable
 The same topics are to a certain degree taught at universities however they all lack one substantial flaw: While they propose some pattern, explain when it is applying and how to implement it, they do not provide any evidence that when using the pattern in a real-world application there is an advantage to gain.  Many patterns claim that they improve the extensibility and increase the decoupling of code however in most of the example code only the basic implementation is showed. The impact on the code when a extension is actually implemented is not being shown by the books which leaves the reader to believe the promises made by the author. 
 
 
-While the patterns are in extensive use and thus have empirically proven themselves useful, scientific research on this topic is far from being exhaustive. A study of 2008 was published at IEEE that tried to cover the effect of using design patterns in software development. This study came to the result that while the implementation of best practice methods in many cases enhanced some quality aspects while at the same time performing worse in other factors. It concluded that the use of patterns should be considered carefully as they lead to a certain trade-off and stated clearly that more research is necessary as some effects could not being explained. \cite{quality}.
+While the patterns are in extensive use and thus have empirically proven themselves useful, to the best of our knowledge scientific research on this topic is far from being exhaustive. A study of 2008 was published at IEEE that tried to cover the effect of using design patterns in software development. This study came to the result that while the implementation of best practice methods in many cases enhanced some quality aspects while at the same time performing worse in other factors. It concluded that the use of patterns should be considered carefully as they lead to a certain trade-off and stated clearly that more research is necessary as some effects could not being explained. \cite{quality}.
 
 Another study published covering a related subject came to similar results, sugesting that the use of established design patterns in most of the cases leads to an improvement of code quality in some aspects while weakening others \cite{quality2}.
 
-It is hardly possible to perform scientific research on real-world software projects as there are only little ways for serious comparison. The patterns only provide a coarse guideline, the actual implementation largely depends on the use case and will vary substantially from application to application. Because of this the research is done partially via \emph{Controlled Experiments}, as is this thesis. Therefore it has to be said that this kind of studies are considered at least partially theoretical as a number of assumptions have to be made. The development of an application is highly subjective and depends on the coding style and experience of the engineer, code review policies can influence the quality as well.
+It is hardly possible to perform scientific research on real-world software projects as there are only little ways for serious comparison. The patterns only provide a coarse guideline, the actual implementation largely depends on the use case and will vary substantially from application to application. Because of this the research is done partially via \emph{Controlled Experiments}, as is this thesis. Therefore it has to be said that this kind of studies are considered at least partially theoretical as a number of assumptions have to be made. The development of an application is highly subjective and depends on the coding style and experience of the engineers, code review policies can influence the quality as well.
 
-However this thesis intends to give insights on how the use of well-established architectural and design pattern that claim to improve extensibility impact the code quality when this extensions are in fact implemented. This is done by developing two applications that are both designed to meet the same use cases and requirements. One is programmed by using established patterns while the other is developed without considerations regarding code quality while  implementing the same basic program structure in order to improve comparability.
+However, this thesis intends to give insights on how the use of well-established architectural and design pattern that claim to improve extensibility impact the code quality when this extensions are in fact implemented. This is done by developing two applications that are both designed to meet the same use cases and requirements. One is programmed without considerations regarding code quality, the other is developed by using established patterns while implementing the same basic program structure in order to improve comparability.
 
-After satisfying the basic requirements new features are being implemented, namely another type of persistence, a different kind of user interface and lastly means for caching data in the application to reduce the need of database queries. After realizing these changes in both programs the costs of implementing can be compared in both quantitative and qualitative ways. 
+After satisfying the basic requirements new features are being implemented, namely another type of persistence and a different kind of user interface. After realizing these changes in both programs the costs of implementing can be compared in both quantitative and qualitative ways. 
+
+All source code including this thesis is online available on Github \footnote{\href{https://github.com/Vallant/design-patterns-study.git}{https://github.com/Vallant/design-patterns-study.git}} under the GPLv3 licence. \footnote{\href{https://www.gnu.org/licenses/gpl-3.0.de.html}{https://www.gnu.org/licenses/gpl-3.0.de.html}}.
 
